// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Digits Decimal 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex=".14" display="block">
  <mn data-latex=".14">.14</mn>
</math>"
`;

exports[`Digits Decimal Point 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="." display="block">
  <mo data-latex=".">.</mo>
</math>"
`;

exports[`Digits Integer 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="2" display="block">
  <mn data-latex="2">2</mn>
</math>"
`;

exports[`Digits Integer Font 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\mathbf{2}" display="block">
  <mrow data-mjx-texclass="ORD" data-latex="\\mathbf{2}">
    <mn mathvariant="bold" data-latex="2">2</mn>
  </mrow>
</math>"
`;

exports[`Digits Number 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="3.14" display="block">
  <mn data-latex="3.14">3.14</mn>
</math>"
`;

exports[`Digits Thousands 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="1{,}000.10" display="block">
  <mn data-latex="1{,}000.10">1,000.10</mn>
</math>"
`;

exports[`Digits Wrong Thousands 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="1{,}0000.10" display="block">
  <mn data-latex="1{,}000">1,000</mn>
  <mn data-latex="0.10">0.10</mn>
</math>"
`;

exports[`DigitsEuropean Decimal European 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex=",14" display="block">
  <mn data-latex=",14">,14</mn>
</math>"
`;

exports[`DigitsEuropean Decimal Point European 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="," display="block">
  <mo data-latex=",">,</mo>
</math>"
`;

exports[`DigitsEuropean Integer European 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="2" display="block">
  <mn data-latex="2">2</mn>
</math>"
`;

exports[`DigitsEuropean Number European 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="3,14" display="block">
  <mn data-latex="3,14">3,14</mn>
</math>"
`;

exports[`DigitsEuropean Thousands European 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="1{.}000,10" display="block">
  <mn data-latex="1{.}000,10">1.000,10</mn>
</math>"
`;

exports[`DigitsEuropean Wrong Thousands European 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="1{.}0000,10" display="block">
  <mn data-latex="1{.}000">1.000</mn>
  <mn data-latex="0,10">0,10</mn>
</math>"
`;

exports[`Identifiers Capital 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="A" display="block">
  <mi data-latex="A">A</mi>
</math>"
`;

exports[`Identifiers Identifier 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="x" display="block">
  <mi data-latex="x">x</mi>
</math>"
`;

exports[`Identifiers Other Character Variant 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\mathbf{&#x391;}&#x391;&#x3333;" display="block">
  <mrow data-mjx-texclass="ORD" data-latex="\\mathbf{&#x391;}">
    <mi mathvariant="bold" data-latex="&#x391;">&#x391;</mi>
  </mrow>
  <mi mathvariant="normal" data-latex="&#x391;">&#x391;</mi>
  <mi mathvariant="normal" data-latex="&#x3333;">&#x3333;</mi>
</math>"
`;

exports[`Identifiers Other Characters 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="x + &#xEB;" display="block">
  <mi data-latex="x">x</mi>
  <mo data-latex="+">+</mo>
  <mi data-latex="&#xEB;">&#xEB;</mi>
</math>"
`;

exports[`Identifiers Two Identifiers 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="xy" display="block">
  <mi data-latex="x">x</mi>
  <mi data-latex="y">y</mi>
</math>"
`;

exports[`Negations Negation Complex 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="a \\not= b \\not\\rightarrow c \\not\\leq d" display="block">
  <mi data-latex="a">a</mi>
  <mo data-latex="=">&#x2260;</mo>
  <mi data-latex="b">b</mi>
  <mo stretchy="false" data-latex="\\rightarrow">&#x219B;</mo>
  <mi data-latex="c">c</mi>
  <mo data-latex="\\leq">&#x2270;</mo>
  <mi data-latex="d">d</mi>
</math>"
`;

exports[`Negations Negation Explicit 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex=" \\not\\longrightarrow" display="block">
  <mo data-latex="\\not\\longrightarrow">&#x27F6;&#x338;</mo>
</math>"
`;

exports[`Negations Negation Large 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex=" \\not3" display="block">
  <mrow data-mjx-texclass="REL">
    <mpadded width="0">
      <mtext>&#x29F8;</mtext>
    </mpadded>
  </mrow>
  <mn data-latex="3">3</mn>
</math>"
`;

exports[`Negations Negation Left Paren 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\not\\left(\\right." display="block">
  <mrow data-mjx-texclass="REL">
    <mpadded width="0">
      <mtext>&#x29F8;</mtext>
    </mpadded>
  </mrow>
  <mrow data-mjx-texclass="INNER" data-latex="\\left(\\right.">
    <mo data-mjx-texclass="OPEN" data-latex="\\left(">(</mo>
    <mo data-mjx-texclass="CLOSE" fence="true" stretchy="true" symmetric="true" data-latex="\\right."></mo>
  </mrow>
</math>"
`;

exports[`Negations Negation Simple 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="a \\not= b" display="block">
  <mi data-latex="a">a</mi>
  <mo data-latex="=">&#x2260;</mo>
  <mi data-latex="b">b</mi>
</math>"
`;

exports[`Primes Double Prime 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="x''" display="block">
  <msup data-latex="x''">
    <mi data-latex="x">x</mi>
    <mo data-mjx-alternate="1" data-latex="''">&#x2033;</mo>
  </msup>
</math>"
`;

exports[`Primes PrePrime 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="'x" display="block">
  <msup>
    <mi></mi>
    <mo data-mjx-alternate="1" data-latex="'">&#x2032;</mo>
  </msup>
  <mi data-latex="x">x</mi>
</math>"
`;

exports[`Primes Prime 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="x'" display="block">
  <msup data-latex="x'">
    <mi data-latex="x">x</mi>
    <mo data-mjx-alternate="1" data-latex="'">&#x2032;</mo>
  </msup>
</math>"
`;

exports[`Primes Prime on Prime 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="x^{'^{'}}" display="block">
  <msup data-latex="x^{'^{'}}">
    <mi data-latex="x">x</mi>
    <mrow data-mjx-texclass="ORD" data-latex="{^{}}">
      <msup data-latex="^{}">
        <mi></mi>
        <mrow data-latex="{}">
          <mo data-mjx-alternate="1" data-mjx-pseudoscript="true" data-latex="'">&#x2032;</mo>
          <mrow data-mjx-texclass="ORD">
            <msup>
              <mi></mi>
              <mo data-mjx-alternate="1" data-latex="'">&#x2032;</mo>
            </msup>
          </mrow>
        </mrow>
      </msup>
    </mrow>
  </msup>
</math>"
`;

exports[`Primes Prime on Sub 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="x^{'_{a}}" display="block">
  <msup data-latex="x^{'_{a}}">
    <mi data-latex="x">x</mi>
    <mrow data-mjx-texclass="ORD" data-latex="{^'_{a}}">
      <msubsup data-latex="^'_{a}">
        <mi></mi>
        <mrow data-mjx-texclass="ORD" data-latex="{a}">
          <mi data-latex="a">a</mi>
        </mrow>
        <mo data-mjx-alternate="1" data-latex="'">&#x2032;</mo>
      </msubsup>
    </mrow>
  </msup>
</math>"
`;

exports[`Primes Prime on Sup 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="x^{a^{'}}" display="block">
  <msup data-latex="x^{a^{'}}">
    <mi data-latex="x">x</mi>
    <mrow data-mjx-texclass="ORD" data-latex="{a^{}}">
      <msup data-latex="a^{}">
        <mi data-latex="a">a</mi>
        <mrow data-mjx-texclass="ORD" data-latex="{}">
          <msup>
            <mi></mi>
            <mo data-mjx-alternate="1" data-latex="'">&#x2032;</mo>
          </msup>
        </mrow>
      </msup>
    </mrow>
  </msup>
</math>"
`;

exports[`Primes PrimeSup 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="x^{'}" display="block">
  <msup data-latex="x^{'}">
    <mi data-latex="x">x</mi>
    <mrow data-mjx-texclass="ORD" data-latex="{}">
      <msup>
        <mi></mi>
        <mo data-mjx-alternate="1" data-latex="'">&#x2032;</mo>
      </msup>
    </mrow>
  </msup>
</math>"
`;

exports[`Primes Quadruple Prime 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="x''''" display="block">
  <msup data-latex="x''''">
    <mi data-latex="x">x</mi>
    <mo data-mjx-alternate="1" data-latex="''''">&#x2057;</mo>
  </msup>
</math>"
`;

exports[`Primes Quintuple Prime 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="x'''''" display="block">
  <msup data-latex="x'''''">
    <mi data-latex="x">x</mi>
    <mo data-mjx-alternate="1" data-latex="'''''">&#x2032;&#x2032;&#x2032;&#x2032;&#x2032;</mo>
  </msup>
</math>"
`;

exports[`Primes Sup on Prime 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="x^{'^{a}}" display="block">
  <msup data-latex="x^{'^{a}}">
    <mi data-latex="x">x</mi>
    <mrow data-mjx-texclass="ORD" data-latex="{^{}}">
      <msup data-latex="^{}">
        <mi></mi>
        <mrow data-latex="{}">
          <mo data-mjx-alternate="1" data-mjx-pseudoscript="true" data-latex="'">&#x2032;</mo>
          <mrow data-mjx-texclass="ORD">
            <mi data-latex="a">a</mi>
          </mrow>
        </mrow>
      </msup>
    </mrow>
  </msup>
</math>"
`;

exports[`Primes Triple Prime 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="x'''" display="block">
  <msup data-latex="x'''">
    <mi data-latex="x">x</mi>
    <mo data-mjx-alternate="1" data-latex="'''">&#x2034;</mo>
  </msup>
</math>"
`;

exports[`Roots Explicit Root 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\root 4 \\of x" display="block">
  <mroot data-latex="\\root 4 \\of x">
    <mi data-latex="x">x</mi>
    <mn data-latex="4">4</mn>
  </mroot>
</math>"
`;

exports[`Roots Nth Root 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\sqrt[n]{x}" display="block">
  <mroot data-latex="\\sqrt[n]{x}">
    <mi data-latex="x">x</mi>
    <mi data-latex="n">n</mi>
  </mroot>
</math>"
`;

exports[`Roots Square Root 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\sqrt{x}" display="block">
  <msqrt data-latex="\\sqrt{x}">
    <mi data-latex="x">x</mi>
  </msqrt>
</math>"
`;

exports[`Roots Square Root Fraction 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\sqrt\\frac{a}{b}" display="block">
  <msqrt data-latex="\\sqrt\\frac{a}{b}">
    <mfrac data-latex="\\frac{a}{b}">
      <mi data-latex="a">a</mi>
      <mi data-latex="b">b</mi>
    </mfrac>
  </msqrt>
</math>"
`;

exports[`Sub and Superscripts Cube 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="x^3" display="block">
  <msup data-latex="x^3">
    <mi data-latex="x">x</mi>
    <mn data-latex="3">3</mn>
  </msup>
</math>"
`;

exports[`Sub and Superscripts Empty Base Index 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="_3" display="block">
  <msub data-latex="_3">
    <mi></mi>
    <mn data-latex="3">3</mn>
  </msub>
</math>"
`;

exports[`Sub and Superscripts Empty Base Index2 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="{}_3" display="block">
  <msub data-latex="{}_3">
    <mrow data-mjx-texclass="ORD" data-latex="{}"></mrow>
    <mn data-latex="3">3</mn>
  </msub>
</math>"
`;

exports[`Sub and Superscripts Empty base 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="^2" display="block">
  <msup data-latex="^2">
    <mi></mi>
    <mn data-latex="2">2</mn>
  </msup>
</math>"
`;

exports[`Sub and Superscripts Empty base2 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="{}^2" display="block">
  <msup data-latex="{}^2">
    <mrow data-mjx-texclass="ORD" data-latex="{}"></mrow>
    <mn data-latex="2">2</mn>
  </msup>
</math>"
`;

exports[`Sub and Superscripts Index 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="x_3" display="block">
  <msub data-latex="x_3">
    <mi data-latex="x">x</mi>
    <mn data-latex="3">3</mn>
  </msub>
</math>"
`;

exports[`Sub and Superscripts Inline OP Sup 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\mathop{X}^2">
  <msup data-latex="\\mathop{X}^2">
    <mrow data-mjx-texclass="OP" data-latex="\\mathop{X}">
      <mi data-latex="X">X</mi>
    </mrow>
    <mn data-latex="2">2</mn>
  </msup>
</math>"
`;

exports[`Sub and Superscripts Large Operator 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\sum^2_1" display="block">
  <munderover data-latex="\\sum^2 _1">
    <mo data-latex="\\sum">&#x2211;</mo>
    <mn data-latex="1">1</mn>
    <mn data-latex="2">2</mn>
  </munderover>
</math>"
`;

exports[`Sub and Superscripts Move Superscript 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\left( \\sum_1^n \\right)^{2}" display="block">
  <msup data-latex="\\left( \\sum_1 ^n \\right)^{2}">
    <mrow data-mjx-texclass="INNER" data-latex="\\left( \\sum_1 ^n \\right)">
      <mo data-mjx-texclass="OPEN" data-latex="\\left(">(</mo>
      <munderover data-latex="\\sum_1^n">
        <mo data-latex="\\sum">&#x2211;</mo>
        <mn data-latex="1">1</mn>
        <mi data-latex="n">n</mi>
      </munderover>
      <mo data-mjx-texclass="CLOSE" data-latex="\\right)">)</mo>
    </mrow>
    <mrow data-mjx-texclass="ORD" data-latex="{2}">
      <mn data-latex="2">2</mn>
    </mrow>
  </msup>
</math>"
`;

exports[`Sub and Superscripts Square 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="x^2" display="block">
  <msup data-latex="x^2">
    <mi data-latex="x">x</mi>
    <mn data-latex="2">2</mn>
  </msup>
</math>"
`;

exports[`Sub and Superscripts SubSup 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="x^a_3" display="block">
  <msubsup data-latex="x^a_3">
    <mi data-latex="x">x</mi>
    <mn data-latex="3">3</mn>
    <mi data-latex="a">a</mi>
  </msubsup>
</math>"
`;
